Upload via Mobile

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         
         // 交互变量
         let distortionLevel = 0.5; // 默认轻微放大
-        let rotationAngle = 0.0;
+        let rotationAngle = Math.PI;
         let targetRadius = 0.85;
 
         function initWebGL() {
